<resources>
    <string name="app_name">Contact Agenda</string>
    <string name="adicionar_pessoa" />
    <string name="novo_contato">Novo Contato</string>
    <string name="agenda_de_contatos">Agenda de Contatos</string>
    <string name="adicionar_contato">Adicionar Contato</string>
    <string name="ver_lista_de_contatos">Ver Lista de Contatos</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="telefonepais">TelefonePais</string>
    <string name="celular">Celular</string>
    <string name="telefone">Telefone</string>
    <string name="adicionar_contato_activity">Adicionar Contato</string>
    <string name="cadastro">Cadastro</string>
    <string name="foto_do_contato">Foto do contato</string>
    <string name="selecionar_foto">Selecionar Foto</string>
    <string name="pais">País</string>
    <string name="telefone_de_contato">Telefone de Contato</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="voltar">Voltar</string>
    <string name="editar_contato">Editar Contato</string>
    <string name="nome_editar_contato">Nome</string>
    <string name="sobrenome_editar_contato">Sobrenome</string>
    <string name="telefone_editar_contato">Telefone</string>
    <string name="celular_editar_contato">Celular</string>
    <string name="_00_0000_0000">00 0000-0000</string>
    <string name="salvar_alteracoes">Salvar Alterações</string>
    <string name="excluir_contato">Excluir Contato</string>
    <string name="todo">TODO</string>
    <string name="voltar_lista_contatos">Voltar</string>
    <string name="buscar">Buscar</string>
    <string name="campo_buscar">Buscar</string>
    <string name="contatos">Contatos</string>
    <string name="adicionar_contato_lista_contato">Adicionar Contato</string>
    <string name="login_textView">Login</string>
    <string name="logo_do_aplicativo">Logo do aplicativo</string>
    <string name="e_mail_login">E-mail</string>
    <string name="senha_login">Senha</string>
    <string name="login_button">Login</string>
    <string name="cadastrar_button">Cadastrar</string>
    <string name="todo_adicionar_contato">TODO</string>
    <string name="abrir_menu">Abrir menu</string>
    <string name="nome_completo_cadastro">Nome Completo</string>
    <string name="logout">logout</string>
    <string name="perfil">perfil</string>
    <string name="settings">settings</string>
</resources>