<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Top Bar -->
        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/voltar"
                app:srcCompat="@drawable/arrow_back_ios"
                app:tint="@android:color/white"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:text="@string/cadastro"
                android:textAlignment="center"
                android:textColor="#546E7A"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Card Container -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="13dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Foto -->
                <ImageView
                    android:id="@+id/imageViewFotoCadastro"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/foto_borda"
                    android:contentDescription="@string/foto_do_contato"
                    android:scaleType="centerCrop"
                    android:src="@drawable/foto_de_perfil" />

                <Button
                    android:id="@+id/btnSelecionarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBlue"
                    android:text="@string/selecionar_foto"
                    android:textColor="#1B5E20" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/nome_completo_cadastro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNomeCompleto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:inputType="textPersonName"
                        tools:ignore="VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- País -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/pais"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinPais"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:entries="@array/lista_paises"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <!-- Telefone -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/celular"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/colorBlue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCelular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:inputType="phone"
                        android:textColorHint="#757575"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Email -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/e_mail_login">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        tools:ignore="VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Senha -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/senha_login">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        tools:ignore="VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Botão Cadastrar -->
                <Button
                    android:id="@+id/btnCadastrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/colorBlue"
                    android:text="@string/cadastrar"
                    android:textColor="#1B5E20"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
